2003-12-12  David Gravereaux <davygrvy@pobox.com>

	* win/tkWinEmbed.c (TkWinEmbeddedEventProc) : for loop dereferences
	containerPtr but can't get to the if (containerPtr == NULL) test due
	to the unhandled read memory exception for when it really is NULL.

	* win/tkWinX.c (TkWinXInit): Don't restrict InitCommonControlsEx.
	It's valid on all platforms given IE 3.0+ is installed.  As tkWinX.c
	does set #define _WIN32_IE 0x0300, I guess we can accept IE3 as the
	lowest denominator and use the version 4.71 features of Comctl32.dll

	* win/rc/wish.exe.manifest: updated version string.  This file isn't
	compiled.

2003-12-10  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textWind.test: fixed 2 tests so they run on Windows as well
	as unix, and so their results take account of -padx/-pady settings
	for the text widget.
	
2003-12-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/CrtImgType.3: Fixed line-transposition error found by Eric
	Raymond. [Bug 857159]

2003-12-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: updated OpenBSD build configuration based on
	[Patch #775246] (cassoff)

2003-12-09  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinWm.c: fix to memory leak on certain error cases.
	
	* generic/tkTextTag.c: fix reading of freed tag memory, by removing
	all references to freed tags.
	
2003-12-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/entry.n: clean up usage of 'edition' as a verb.

2003-12-05  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/text.test:
	* generic/tkText.c: after debate on sf, allow decreasing tab-stops, 
	hence removing any potential backwards incompatibility, even for
	buggy code. Added new test. [Bug 852949]
	
	* generic/tkText.h: 
	* generic/tkTextDisp.c: 
	* generic/tkTextTag.c: fix to performance problems in the text
	widget when inserting lines which wrap thousands of times 
	[Bug 853003].  Note that the text widget must now perform additional